--- a/scss/components/_elements.scss
+++ b/scss/components/_elements.scss
@@ -185,6 +185,10 @@
       font-size: 28px;
     }
   }
+  .members-image {
+    width: 50%;
+    padding-right: 15px;
+  }
 }
 
 @media screen and (max-width: 470px) {
